# infomentor-rev

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  test_telegram.py
infomentor/: __init__.py  attendance_fetcher.py  auth.py  config.py  discord_notifier.py  llm_client.py  news_fetcher.py  notification_fetcher.py  notifier.py  pupil_fetcher.py  runner.py  schedule_fetcher.py  storage.py  telegram_notifier.py
