[project]
name = "infomentor-rev"
version = "0.1.0"
description = "InfoMentor Notifier"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "selenium>=4.15.0",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pyright",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infomentor"]
